--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.mjs"
+  },
+    "dependencies": {
+    "@types/node": "^18.0.6",
+    "node-fetch": "^3.2.6",
+    "deta": "^2.0.0",
+    "express": "^4.18.2"
   }
 }
